# my-reflection

./: CMakeLists.txt  README.md  main.cpp  simple_refl.h  test_helper.h
example/: basic_usage.h  json_parser.h
include/: simple_refl.h  test_helper.h
test/: basic_tests.h  derive_test.h  function_tests.h  generic_tests.h  helper_tests.h
